--- a/style.css
+++ b/style.css
@@ -1,138 +1,145 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    outline: none;
-  }
-  
-  #header {
-    background-color: rgb(245, 26, 26);
-  }
-  
-  #nav-item {
-    display: flex;
-    justify-content: space-evenly;
-    list-style: none;
-    color: #fff;
-  }
-  
-  #news {
-    font-size: 100px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  #date {
-    font-size: 25px;
-    margin-top: 80px;
-  }
-  
-  #news:hover {
-      cursor: pointer;
-  }
-  
-  #sign {
-    margin-top: 80px;
-    font-size: 30px;
-    font-weight: bold;
-  }
-  
-  #sign:hover {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  outline: none;
+}
+
+#header {
+  background-color: rgb(245, 26, 26);
+  position: relative;
+}
+
+#nav-item {
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+  color: #fff;
+}
+
+#news {
+  font-size: 100px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#date {
+  font-size: 25px;
+  margin-top: 80px;
+}
+
+#news:hover {
     cursor: pointer;
-  }
-  
-  button {
-    font-size: 30px;
-  }
-  
-  .nav {
-    justify-content: space-between;
-    color: black;
-    margin-left: 20px;
-  }
-  
-  .nav-item {
-    font-size: 25px;
-    font-weight: bold;
-  }
-  
-  .nav-item:hover {
-    color: #f10909;
-    cursor: pointer;
-  }
-  
-  #search {
-    color: rgb(102, 92, 92);
-  }
-  
-  #button {
-      color: rgb(245, 7, 7);
-      border: none;
-      background-color: #fff;
-      font-size: 25px;
-      font-weight: bold;
-  }
-  
-  .column {
-    float: left;
-    width: 20%;
-    padding-left: 30px;
-  }
-  
-  .title {
-    font-size: 23px;
-    font-weight: bold;
-    color: rgb(114, 108, 108);
-  }
-  
-  .title2 {
-    font-size: 30px;
-    font-weight: bolder;
-    color: rgb(0, 0, 0);
-  }
-  
-  .title2:hover {
-    text-decoration:underline;
-    cursor: pointer;
-    text-decoration-color: red;
-  }
-  
-  
-  .side-bar {
-    margin-left: 73%;  
-  }
-  
-  .auth {
-    font-size: 20px;
-    font-weight: bold;
-    color: rgb(190, 187, 187);
-  }
-  
-  .side-link {
-    list-style: none;
-    font-size: 25px;
-    color: black;
-    position: -webkit-sticky;
-    /* margin-left: 10px;
-    margin-top: 30px; */
-    display: flex;
-  }
-  
-  .side-link:hover {
-    color: #f10909;
-    list-style: none;
-    cursor: pointer;
-  }
-  
-  .avatar {
-    vertical-align: ;
-    
-    
-  }
-  button {
-    color: rgb(252, 10, 10);
+}
+
+#sign {
+  margin-top: 80px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+#sign:hover {
+  cursor: pointer;
+}
+
+button {
+  font-size: 30px;
+}
+
+.nav {
+  justify-content: space-between;
+  color: black;
+  margin-left: 20px;
+}
+
+.nav-item {
+  font-size: 25px;
+  font-weight: bold;
+}
+h1 {
+  font-size: 1.5rem;
+}
+
+.nav-item:hover {
+  color: #f10909;
+  cursor: pointer;
+}
+
+#search {
+  color: rgb(102, 92, 92);
+}
+
+#button {
+    color: rgb(245, 7, 7);
+    border: none;
     background-color: #fff;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
-  } 
+}
+
+.column {
+  float: left;
+  width: 20%;
+  padding-left: 30px;
+}
+
+.title {
+  font-size: 23px;
+  font-weight: bold;
+  color: rgb(114, 108, 108);
+}
+
+.card-title {
+  font-size: 30px;
+  font-weight: bolder;
+  color: rgb(0, 0, 0);
+}
+
+.card-title:hover {
+  text-decoration:underline;
+  cursor: pointer;
+  text-decoration-color: red;
+}
+
+
+.side-bar {
+  margin-left: 73%;  
+}
+
+.auth {
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(190, 187, 187);
+}
+
+.side-link {
+  list-style: none;
+  font-size: 25px;
+  color: black;
+  position: -webkit-sticky;
+  /* margin-left: 10px;
+  margin-top: 30px; */
+  display: flex;
+}
+
+.side-link:hover {
+  color: #f10909;
+  list-style: none;
+  cursor: pointer;
+}
+
+.card-text {
+  font-size: 1.5rem;
+}
+
+.avatar {
+  vertical-align: ;
   
+  
+}
+button {
+  color: rgb(252, 10, 10);
+  background-color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+} 
   
