--- a/style.css
+++ b/style.css
@@ -250,13 +250,12 @@ iframe {
 }
 
 .but {
-  height: 10%;
   color: #f10909;
   border: none;
   background-color: aliceblue;
-  margin-top: 250px;
-  position: absolute;
-
+  bottom: 50px;
+  height: 50px;
+  position: relative;
 }
 
 /* Medium devices (desktops, 992px and up) */
